--- a/9.6.3, 9.6.4, exercise 8.rmd
+++ b/9.6.3, 9.6.4, exercise 8.rmd
@@ -1,6 +1,7 @@
 ---
-output: html_document
-
+output:
+  #pdf_document: default
+  html_document: default
 ---
 
 # 9.6.3 ROC Curves
@@ -11,28 +12,28 @@ We begin with this portion of code is from 9.6.2, which is required for section 
 library(e1071)
 set.seed(1)
 x=matrix(rnorm(200*2), ncol=2)
-x[1:100,]=x[1:100,]+2
-x[101:150,]=x[101:150,]-2
-y=c(rep(1,150),rep(2,50))
+x[1:100,] <- x[1:100,]+2
+x[101:150,] <- x[101:150,]-2
+y <- c(rep(1,150),rep(2,50))
 dat=data.frame(x=x,y=as.factor(y))
-train=sample(200,100)
+train <- sample(200,100)
 ```
 
 In order to implement ROC curves in R, we must first import the ROCR package. Additionally, we must write a short function to plot an ROC curve given the following: the vector 'pred' containing a numerical score for each observation and the vector 'truth' containing the class label for each observation.
 
 ```{r}
 library(ROCR)
-rocplot=function(pred, truth, ...){
-  predob = prediction(pred, truth)
-  perf = performance(predob, "tpr", "fpr")
+rocplot <- function(pred, truth, ...){
+  predob <- prediction(pred, truth)
+  perf <- performance(predob, "tpr", "fpr")
   plot(perf,...)}
 ```
 
 By default, support vector classifiers and machines in R yield class labels. For the above function, we require fitted values, which represent the numerical scores used to determine the class label. To retrieve these fitted values, we need to use "decision.values=T" in the svm() function and use predict().
 
 ```{r}
-svmfit.opt=svm(y~., data=dat[train,], kernel="radial",gamma=2, cost=1,decision.values=T)
-fitted=attributes(predict(svmfit.opt,dat[train,],decision.values=TRUE))$decision.values
+svmfit.opt <- svm(y~., data=dat[train,], kernel="radial",gamma=2, cost=1,decision.values=T)
+fitted <- attributes(predict(svmfit.opt,dat[train,],decision.values=TRUE))$decision.values
 ```
 
 The code above provides us what we need to plot the ROC curve. Below, we plot the ROC curve for two different SVMs. The first of which is the SVM we generated earlier, while the second is a support vector machine with a greater value for gamma.
@@ -40,23 +41,35 @@ The code above provides us what we need to plot the ROC curve. Below, we plot th
 ```{r}
 par(mfrow=c(1,1))
 rocplot(fitted,dat[train,"y"],main="Training Data")
-svmfit.flex=svm(y~., data=dat[train,], kernel="radial",gamma=50, cost=1, decision.values=T)
-fitted=attributes(predict(svmfit.flex,dat[train,],decision.values=T))$decision.values
+svmfit.flex <- svm(y~., data=dat[train,], kernel="radial",gamma=50, cost=1, decision.values=T)
+fitted <- attributes(predict(svmfit.flex,dat[train,],decision.values=T))$decision.values
 rocplot(fitted,dat[train,"y"],add=T,col="red")
+legend(0,1,legend=c("gamma = 2","gamma = 50"),col=c("black","red"),lty=1)
 ```
 
-These predictions seem to be accurate. The increase in gamma made the fit more flexible and increased accuracy.
+These predictions seem to be incredible inaccurate. An ideal ROC curve hugs the upper-left of the graph. The increase in gamma made the fit more flexible, but decreased accuracy in this case.
 
 The above ROC curves pertain to the training data; we are more interested in the results for the test data.
 
 ```{r}
-fitted=attributes(predict(svmfit.opt,dat[-train,],decision.values=T))$decision.values
-rocplot(fitted,dat[-train,"y"],main="Test Data")
-fitted=attributes(predict(svmfit.flex,dat[-train,],decision.values=T))$decision.values
-rocplot(fitted,dat[-train,"y"],add=T,col="red")
+fitted.opt <- attributes(predict(svmfit.opt,dat[-train,],decision.values=T))$decision.values
+rocplot(fitted.opt,dat[-train,"y"],main="Test Data")
+
+fitted.flex <- attributes(predict(svmfit.flex,dat[-train,],decision.values=T))$decision.values
+rocplot(fitted.flex,dat[-train,"y"],add=T,col="red")
+
+legend(0,1,legend=c("gamma = 2","gamma = 50"),col=c("black","red"),lty=1)
 ```
 
-When we compute the ROC curves on the test data, the less flexible model with gamma = 2 is more accurate.
+When we compute the ROC curves on the test data, the more flexible model with gamma = 50 is more accurate.
+
+Below, we take a look at the underlying fitted values and the true classes.
+
+```{r}
+test_dat <- dat[-train,]
+test_dat[,4] <- fitted.opt
+print(test_dat[1:20,])
+```
 
 # 9.6.4 SVM with Multiple Classes
 
@@ -66,15 +79,15 @@ Below we generate a third class of observations and fit a support vector machine
 
 ```{r}
 set.seed(1)
-x=rbind(x, matrix(rnorm(50*2), ncol=2))
-y=c(y, rep(0,50))
-x[y==0,2]=x[y==0,2]+2
-dat=data.frame(x=x, y=as.factor(y))
+x <- rbind(x, matrix(rnorm(50*2), ncol=2))
+y <- c(y, rep(0,50))
+x[y==0,2] <- x[y==0,2]+2
+dat <- data.frame(x=x, y=as.factor(y))
 par(mfrow=c(1,1))
 plot(x,col=(y+1))
 ```
 ```{r}
-svmfit=svm(y~., data=dat, kernel="radial", cost=10, gamma=1)
+svmfit <- svm(y~., data=dat, kernel="radial", cost=10, gamma=1)
 plot(svmfit, dat)
 ```
 
